@@ -301,6 +301,12 @@
 </form>
 <div id="wrap-container"><p id="wrap"></p></div>
 
+<!-- test input elements with scrollLeft/scrollTop -->
+<form method="post" action="blah">
+  <input id="scrollOffset_input" type="text" value="0123456789012345678901234567890123456789" />
+  <textarea id="scrollOffset_textarea">0123456789012345678901234567890123456789</textarea>
+</form>
+
 <!-- Positioning methods bench -->
 <div id="body_relative" style="position: relative;"></div>
 <div id="body_absolute" style="position: absolute; top: 10px; left: 10px">
